<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/zhi_hu"
            android:icon="@drawable/zhihu"
            android:title="@string/zhihu"/>
        <item
            android:id="@+id/top_news"
            android:icon="@drawable/wangyi"
            android:title="@string/topnews"/>
        <item
            android:id="@+id/meizi"
            android:icon="@drawable/look2"
            android:title="@string/meizi"/>

    </group>

    <item android:title="设置">
        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_color_lens_white_24dp"
                android:title="Theme"
                app:actionLayout="@layout/action_view_switch"/>
            <item
                android:id="@+id/nav_set"
                android:icon="@drawable/set"
                android:title="设置"/>
        </menu>
    </item>

</menu>
